--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "^5.1.0",
+    "styled-components": "^4.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
