implement claim function

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 node_modules
-REACT_APP_CONTRACT_ADDRESS = ''
+REACT_APP_DVOUCHER_ADDRESS = '0xD81E0d8D9667DDf2E667AAB7F142E93CCDb2f9c6'
+REACT_APP_DVOUCHERMINTER_ADDRESS = '0x0D51E200FD59e63815589E46AAe95bf0AD967444'
 REACT_APP_INFURA_KEY = ''
