--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.13",
     "assert": "^2.0.0",
+    "axios": "^0.27.2",
     "ethers": "^5.7.1",
     "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
@@ -26,13 +27,13 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "^5.1.0",
     "simple-react-modal": "^0.5.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "styled-components": "^4.0.0",
     "web-vitals": "^2.1.0",
-    "web3-react": "^5.0.5",
-    "react-tabs": "^5.1.0",
-    "styled-components": "^4.0.0"
+    "web3-react": "^5.0.5"
   },
   "scripts": {
     "start": "react-app-rewired start",
